--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,11 @@
 		    <version>${log4j.version}</version>
 		</dependency>
 		<dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-slf4j-impl</artifactId>
+		    <version>${log4j.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
 		    <version>${log4j.version}</version>
@@ -175,6 +180,13 @@
 		    <groupId>org.bouncycastle</groupId>
 		    <artifactId>bcprov-jdk18on</artifactId>
 		    <version>1.75</version>
+		</dependency>
+		
+		<!-- Hot deply -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
 		</dependency>
 		
 	</dependencies>
