--- a/dataflow/dataflow-server.yml
+++ b/dataflow/dataflow-server.yml
@@ -5,15 +5,17 @@ spring:
   cloud: 
     dataflow: 
       task: 
-        data-source:
-          schema-target: BOOT2
         initialize-enabled: false
+        scheduler-enabled: true
         table-prefix: TASK_
         platform: 
           local: 
             accounts: 
               default: 
-                workingDirectoriesRoot: ${user.home}/dataflow/tasks				
+                workingDirectoriesRoot: ${user.home}/dataflow/tasks		
+    scheduler: 
+      cron4j: 
+        enabled: true
       applicationProperties: 
         task: 
           globalProperties: 
