--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,2 @@
-/dataflow/spring-cloud-dataflow-server-2.11.5.jar
-/skipper/spring-cloud-skipper-server-2.11.5.jar
 /target
+/docs/docker/dstone-batch-server/target
