--- a/docs/docker/dstone-batch-server/01.dstone-batch-server-docker.yml
+++ b/docs/docker/dstone-batch-server/01.dstone-batch-server-docker.yml
@@ -12,7 +12,7 @@
 ########################################################################################
 services:
 
-  # Application 프레임웍 
+  # 배치프레임웍 Application 관리서버
   dstone-batch-server:
     
     # ---------- 최초작업일 때 ---------------------- #
