--- a/conf/dataflow-server.yml
+++ b/conf/dataflow-server.yml
@@ -23,19 +23,19 @@ spring:
       applicationProperties: 
         task: 
           globalProperties: 
-            spring.datasource.url: jdbc:mysql://localhost:3306/dataflow?useSSL=false&serverTimezone=UTC
+            spring.datasource.url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/dataflow?useSSL=false&serverTimezone=UTC
             spring.datasource.username: dataflow
             spring.datasource.password: dataflow
             spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
   datasource: 
-    url: jdbc:mysql://localhost:3306/dataflow?useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/dataflow?useSSL=false&serverTimezone=UTC
     username: dataflow
     password: dataflow
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa: 
     database-platform: org.hibernate.dialect.MySQL57Dialect  # 추가
     hibernate: 
-      ddl-auto: update # none/update
+      ddl-auto: update # none/update 
     show-sql: true
     properties: 
       hibernate: 
