--- a/conf/dataflow-server.yml
+++ b/conf/dataflow-server.yml
@@ -36,6 +36,8 @@ spring:
     database-platform: org.hibernate.dialect.MySQL57Dialect  # 추가
     hibernate: 
       ddl-auto: update # none/update 
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     show-sql: true
     properties: 
       hibernate: 
