--- a/docs/docker/dstone-batch-server/01.dstone-batch-server-docker.yml
+++ b/docs/docker/dstone-batch-server/01.dstone-batch-server-docker.yml
@@ -16,10 +16,10 @@ services:
   dstone-batch-server:
     
     # ---------- 최초작업일 때 ---------------------- #
-    image: eclipse-temurin:21-jdk
+    # image: eclipse-temurin:21-jdk
     # --------------------------------------------- #    
     # ---------- Docker Hub 에서 가져올 때 ---------- #
-    # image: jysn007/dstone-batch-server:latest
+    image: jysn007/dstone-batch-server:latest
     # --------------------------------------------- #
     container_name: dstone-batch-server
     ports:
