--- a/docs/docker/dstone-batch-server/01.dstone-batch-server-docker.yml
+++ b/docs/docker/dstone-batch-server/01.dstone-batch-server-docker.yml
@@ -4,11 +4,11 @@
 #   /workshop/dstone-batch-server
 # <작업명령>
 # 1. Docker Compose 실행
-#   - docker-compose -p dstone -f /workshop/dstone-batch-server/01.dstone-batch-server-docker.yml up -d
+#   - docker compose -p dstone -f /workshop/dstone-batch-server/01.dstone-batch-server-docker.yml up -d
 # 2. 로그 확인
-#   - docker-compose -p dstone -f /workshop/dstone-batch-server/01.dstone-batch-server-docker.yml logs -f dstone-batch-server
+#   - docker compose -p dstone -f /workshop/dstone-batch-server/01.dstone-batch-server-docker.yml logs -f dstone-batch-server
 # 3. 중지 및 삭제
-#   - docker-compose -p dstone -f /workshop/dstone-batch-server/01.dstone-batch-server-docker.yml down -v
+#   - docker compose -p dstone -f /workshop/dstone-batch-server/01.dstone-batch-server-docker.yml down -v
 ########################################################################################
 services:
 
